--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
   <section id="experience">
     <h2>Professional Experience</h2>
     <div class="card">
+      <h3>Florida Polytechnic University – Presidential Ambassador</h3>
+      <p>Lakeland, FL | May 2025 – Present</p>
+      <ul>
+        <li>One of nine individuals chosen from the school to represent President and the school's values</li>
+        <li>Given tours to sponsoring companies, government officials, and personal donors to the school</li>
+      </ul>
+    </div>
+    <div class="card">
       <h3>Wiring Technologies Inc. – Low-Voltage Technician</h3>
       <p>Lakeland, FL | Dec 2024 – Aug 2025</p>
       <ul>
@@ -124,11 +132,6 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="card">
-      <h3>Socket-Based Network Project</h3>
-      <p>Nov 2024</p>
-      <p>Developed server for file uploads/downloads between connected clients.</p>
-    </div>
-    <div class="card">
       <h3>CRM Software Project</h3>
       <p>Jan 2024 – Present</p>
       <p>Designed a database for Bill Krautler Photography and Hazely Corp.</p>
@@ -137,6 +140,16 @@
       <h3>RoboBoat Project</h3>
       <p>Aug 2025 – Present</p>
       <p>Created programs for an autonomous boat using machine learning.</p>
+    </div>
+    <div class="card">
+      <h3>Socket-Based Network Project</h3>
+      <p>Nov 2024</p>
+      <p>Developed server for file uploads/downloads between connected clients.</p>
+    </div>
+    <div class="card">
+      <h3>Python Audio project/h3>
+      <p>Dec 2023</p>
+      <p>Used Python to clean, modify, and analyze a recorded audio file</p>
     </div>
   </section>
 
