--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <p>Developed server for file uploads/downloads between connected clients.</p>
     </div>
     <div class="card">
-      <h3>Python Audio project</h3>
+      <h3>Python Audio Project</h3>
       <p>Dec 2023</p>
       <p>Used Python to clean, modify, and analyze a recorded audio file</p>
     </div>
